# oxygine-billing

./: .gitignore  Android.mk  CMakeLists.txt
android/billing/: AndroidManifest.xml  build.gradle  build.xml  project.properties  settings.gradle
example/HelloWorldBilling/proj.android/: AndroidManifest.xml  build-run.bat  build.gradle  build.xml  gradle_build_run.bat  install.bat  project.properties  settings.gradle
example/HelloWorldBilling/proj.android/jni/src/: Android.mk
example/HelloWorldBilling/proj.android/res/values/: strings.xml
example/HelloWorldBilling/proj.cmake/: CMakeLists.txt
example/HelloWorldBilling/proj.emscripten/: CMakeLists.txt  build.bat  build_release.bat
example/HelloWorldBilling/proj.ios/HelloWorldBilling_ios.xcodeproj/: project.pbxproj
example/HelloWorldBilling/proj.macosx/HelloWorldBilling_macosx.xcodeproj/: project.pbxproj
example/HelloWorldBilling/proj.win32/: HelloWorldBilling.sln  HelloWorldBilling.vcxproj  HelloWorldBilling.vcxproj.filters
example/HelloWorldBilling/src/: example.cpp  test.cpp  test.h
proj.ios/oxygine-billing.xcodeproj/: project.pbxproj
proj.ios/oxygine-billing.xcodeproj/xcuserdata/mac.xcuserdatad/xcschemes/: oxygine-billing.xcscheme  xcschememanagement.plist
proj.ios/oxygine-billing.xcodeproj/xcuserdata/mak.xcuserdatad/xcschemes/: oxygine-billing.xcscheme
src/: billing.cpp  billing.h  oxygine-billing.h
src/android/: AndroidBilling.cpp  AndroidBilling.h
src/ios/: IOSBilling.h  IOSBilling.mm  IosBilling.h  IosBilling.mm
src/sim/: BillingSimulator.cpp  BillingSimulator.h
(+4 files in other folders)
